@@ -11,12 +11,15 @@ package org.elasticsearch.snapshots;
 import org.elasticsearch.cluster.metadata.RepositoriesMetadata;
 import org.elasticsearch.cluster.metadata.RepositoryMetadata;
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.health.Diagnosis;
+import org.elasticsearch.health.Diagnosis.Resource.Type;
 import org.elasticsearch.health.HealthIndicatorDetails;
 import org.elasticsearch.health.HealthIndicatorImpact;
 import org.elasticsearch.health.HealthIndicatorResult;
 import org.elasticsearch.health.HealthIndicatorService;
 import org.elasticsearch.health.ImpactArea;
 import org.elasticsearch.health.SimpleHealthIndicatorDetails;
+import org.elasticsearch.health.node.HealthInfo;
 import org.elasticsearch.repositories.RepositoryData;
 
 import java.util.Collections;
@@ -28,7 +31,6 @@ import static org.elasticsearch.common.Strings.collectionToDelimitedStringWithLi
 import static org.elasticsearch.common.util.CollectionUtils.limitSize;
 import static org.elasticsearch.health.HealthStatus.GREEN;
 import static org.elasticsearch.health.HealthStatus.RED;
-import static org.elasticsearch.health.ServerHealthComponents.SNAPSHOT;
 
 /**
  * This indicator reports health for snapshot repositories.
@@ -43,6 +45,17 @@ public class RepositoryIntegrityHealthIndicatorService implements HealthIndicato
     public static final String NAME = "repository_integrity";
 
     public static final String HELP_URL = "https://ela.st/fix-repository-integrity";
+
+    public static final String REPOSITORY_CORRUPTED_IMPACT_ID = "repository_corruption";
+
+    public static final Diagnosis.Definition CORRUPTED_REPOSITORY = new Diagnosis.Definition(
+        NAME,
+        "corrupt_repo_integrity",
+        "Multiple clusters are writing to the same repository.",
+        "Remove the repository from the other cluster(s), or mark it as read-only in the other cluster(s), and then re-add the repository"
+            + " to this cluster.",
+        HELP_URL
+    );
 
     public static final String NO_REPOS_CONFIGURED = "No snapshot repositories configured.";
     public static final String NO_CORRUPT_REPOS = "No corrupted snapshot repositories.";
@@ -59,17 +72,7 @@ public class RepositoryIntegrityHealthIndicatorService implements HealthIndicato
     }
 
     @Override
-    public String component() {
-        return SNAPSHOT;
-    }
-
-    @Override
-    public String helpURL() {
-        return HELP_URL;
-    }
-
-    @Override
-    public HealthIndicatorResult calculate(boolean explain) {
+    public HealthIndicatorResult calculate(boolean verbose, int maxAffectedResourcesCount, HealthInfo healthInfo) {
         var snapshotMetadata = clusterService.state().metadata().custom(RepositoriesMetadata.TYPE, RepositoriesMetadata.EMPTY);
 
         if (snapshotMetadata.repositories().isEmpty()) {
@@ -95,13 +98,15 @@ public class RepositoryIntegrityHealthIndicatorService implements HealthIndicato
             return createIndicator(
                 GREEN,
                 "No corrupted snapshot repositories.",
-                explain ? new SimpleHealthIndicatorDetails(Map.of("total_repositories", totalRepositories)) : HealthIndicatorDetails.EMPTY,
+                verbose ? new SimpleHealthIndicatorDetails(Map.of("total_repositories", totalRepositories)) : HealthIndicatorDetails.EMPTY,
                 Collections.emptyList(),
                 Collections.emptyList()
             );
         }
         List<HealthIndicatorImpact> impacts = Collections.singletonList(
             new HealthIndicatorImpact(
+                NAME,
+                REPOSITORY_CORRUPTED_IMPACT_ID,
                 1,
                 String.format(
                     Locale.ROOT,
@@ -115,7 +120,7 @@ public class RepositoryIntegrityHealthIndicatorService implements HealthIndicato
         return createIndicator(
             RED,
             createCorruptedRepositorySummary(corrupted),
-            explain
+            verbose
                 ? new SimpleHealthIndicatorDetails(
                     Map.of(
                         "total_repositories",
@@ -128,7 +133,12 @@ public class RepositoryIntegrityHealthIndicatorService implements HealthIndicato
                 )
                 : HealthIndicatorDetails.EMPTY,
             impacts,
-            Collections.emptyList()
+            List.of(
+                new Diagnosis(
+                    CORRUPTED_REPOSITORY,
+                    List.of(new Diagnosis.Resource(Type.SNAPSHOT_REPOSITORY, limitSize(corrupted, maxAffectedResourcesCount)))
+                )
+            )
         );
     }
 
